data: URLs should not be preloaded https://bugs.webkit.org/show_bug.cgi?id=149829

Reviewed by Ryosuke Niwa.

Source/WebCore:

Update the HTMLPreloadScanner so that data: URLs do not get preloaded.
There is no need as the data is already available.

Test: fast/preloader/image-data-url.html

* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::shouldPreload):

LayoutTests:

Add layout test to make sure that images with a data: URL do not
get preloaded.

* fast/preloader/image-data-url-expected.txt: Added.
* fast/preloader/image-data-url.html: Added.


Canonical link: https://commits.webkit.org/167953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190605 268f45cc-cd09-0410-ab3c-d52691b4dbfc