Source/WebCore/html/parser/HTMLPreloadScanner.cpp
@@ -218,6 +218,9 @@ private:
         if (m_urlToLoad.isEmpty())
             return false;
 
+        if (m_urlToLoad.startsWith("data:", false))
+            return false;
+
         if (m_tagId == TagId::Link && !m_linkIsStyleSheet)
             return false;
 
